# bx-framework

./: .gitmodules  CMakeLists.txt  README.md
include/bx/framework/: framework.hpp  gameobject.hpp  gameobject.serial.hpp
include/bx/framework/components/: animator.hpp  animator.serial.hpp  attributes.hpp  attributes.serial.hpp  audio_listener.hpp  audio_listener.serial.hpp  audio_source.hpp  audio_source.serial.hpp  camera.hpp  camera.serial.hpp  character_controller.hpp  character_controller.serial.hpp  collider.hpp  collider.serial.hpp  light.hpp  light.serial.hpp  mesh_filter.hpp  mesh_filter.serial.hpp  mesh_renderer.hpp  mesh_renderer.serial.hpp  rigidbody.hpp  rigidbody.serial.hpp  spline.hpp  spline.serial.hpp  transform.hpp  transform.serial.hpp
include/bx/framework/editor/importers/: model_importer.hpp  texture_importer.hpp
include/bx/framework/modules/: physics.hpp
include/bx/framework/resources/: animation.hpp  animation.serial.hpp  material.hpp  material.serial.hpp  mesh.hpp  mesh.serial.hpp  shader.hpp  shader.serial.hpp  skeleton.hpp  skeleton.serial.hpp  texture.hpp  texture.serial.hpp
include/bx/framework/systems/: acoustics.hpp  dynamics.hpp  renderer.hpp
src/bx/framework/: framework.cpp  game_runtime.cpp  gameobject.cpp
src/bx/framework/components/: animator.cpp
src/bx/framework/editor/gizmos/: spline_gizmo.cpp  transform_gizmo.cpp
src/bx/framework/editor/importers/: model_importer.cpp  texture_importer.cpp
src/bx/framework/editor/views/: gameobject_view.cpp  inspector_view.cpp  scene_view.cpp
src/bx/framework/resources/: animation.cpp  material.cpp  mesh.cpp  shader.cpp  skeleton.cpp  texture.cpp
src/bx/framework/systems/: renderer.cpp
